[gd_scene load_steps=7 format=3 uid="uid://bq11jmsomieh6"]

[ext_resource type="Script" uid="uid://ucp08vkau0lj" path="res://scripts/bell.gd" id="1_j7vni"]
[ext_resource type="AudioStream" uid="uid://tk8ni3boah2r" path="res://assets/audio/reception-bell-14620.mp3" id="2_sdw5a"]
[ext_resource type="Texture2D" uid="uid://c03fapssxthge" path="res://assets/sprites/interior/bell/bell-pressed.png" id="3_c5yny"]
[ext_resource type="Texture2D" uid="uid://go5wucntiyvl" path="res://assets/sprites/interior/bell/bell-still.png" id="4_8g6tv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdw5a"]
size = Vector2(16.78683, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_e52fn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8g6tv")
}, {
"duration": 1.0,
"texture": ExtResource("3_c5yny")
}, {
"duration": 1.0,
"texture": ExtResource("4_8g6tv")
}],
"loop": false,
"name": &"ring",
"speed": 7.0
}]

[node name="Bell" type="Area2D"]
script = ExtResource("1_j7vni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11.449188, 0)
scale = Vector2(2.2101624, -0.5612256)
shape = SubResource("RectangleShape2D_sdw5a")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_sdw5a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_e52fn")
animation = &"ring"
frame = 2
frame_progress = 1.0

[connection signal="bell_rung" from="." to="." method="_on_bell_rung"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
